[gd_scene load_steps=3 format=3 uid="uid://b3v8x6xddq0qe"]

[ext_resource type="Script" path="res://player/player_camera.gd" id="1_2r2xx"]

[sub_resource type="SphereShape3D" id="SphereShape3D_e47yl"]
radius = 0.05

[node name="PlayerCamera" type="Node3D"]
script = ExtResource("1_2r2xx")

[node name="CamYaw" type="Node3D" parent="."]

[node name="CamPitch" type="Node3D" parent="CamYaw"]

[node name="SpringArm" type="SpringArm3D" parent="CamYaw/CamPitch"]
shape = SubResource("SphereShape3D_e47yl")
spring_length = 2.0

[node name="PlayerCamera" type="Camera3D" parent="CamYaw/CamPitch/SpringArm"]

[node name="InteractRaycast" type="RayCast3D" parent="CamYaw/CamPitch/SpringArm/PlayerCamera"]
target_position = Vector3(0, 0, -3)
collision_mask = 4
debug_shape_custom_color = Color(1, 1, 0.0470588, 1)
